fix overflow issues with pre element

--- a/src/root.css
+++ b/src/root.css
@@ -367,6 +367,8 @@ pre {
     border-radius: 0.5em;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+    overflow-x: scroll;
+    width: 100%;
 }
 
 /* .modal {
